@@ -990,7 +990,7 @@ static void test_spheroid_area(void)
 	a1 = lwgeom_area_sphere(lwg, &s);
 	a2 = lwgeom_area_spheroid(lwg, &s);
 	//printf("\nsphere: %.12g\nspheroid: %.12g\n", a1, a2);
-	CU_ASSERT_DOUBLE_EQUAL(a1, 89.7211470368, 0.0001); /* sphere */
+	CU_ASSERT_DOUBLE_EQUAL(a1, 89.7127703297, 0.0001); /* sphere */
 	CU_ASSERT_DOUBLE_EQUAL(a2, 89.8684316032, 0.0001); /* spheroid */
 	lwgeom_free(lwg);
 
@@ -1009,7 +1009,7 @@ static void test_spheroid_area(void)
 	lwgeom_calculate_gbox_geodetic(lwg, &gbox);
 	a1 = lwgeom_area_sphere(lwg, &s);
 	a2 = lwgeom_area_spheroid(lwg, &s);
-	//printf("\nsphere: %.12g\nspheroid: %.12g\n", a1, a2);
+	printf("\nsphere: %.12g\nspheroid: %.12g\n", a1, a2);
 	CU_ASSERT_DOUBLE_EQUAL(a1, 12360265021.1, 10.0); /* sphere */
 	CU_ASSERT_DOUBLE_EQUAL(a2, 12304814950.073, 100.0); /* spheroid */
 	lwgeom_free(lwg);
@@ -1157,6 +1157,24 @@ static void test_lwgeom_segmentize_sphere(void)
 	return;
 }
 
+static void test_lwgeom_area_sphere(void)
+{
+	LWGEOM *lwg;
+	double area;
+	SPHEROID s;
+
+	/* Init to WGS84 */
+	spheroid_init(&s, WGS84_MAJOR_AXIS, WGS84_MINOR_AXIS);
+
+	/* Simple case */
+	lwg = lwgeom_from_wkt("POLYGON((1 1, 1 2, 2 2, 2 1, 1 1))", LW_PARSER_CHECK_NONE);
+	area = lwgeom_area_sphere(lwg, &s);
+	
+	CU_ASSERT_DOUBLE_EQUAL(area, 12360265021.3561, 0.01);
+	lwgeom_free(lwg);	
+	return;
+}
+
 /*
 ** Used by test harness to register the tests in this file.
 */
@@ -1164,6 +1182,7 @@ CU_TestInfo geodetic_tests[] =
 {
 	PG_TEST(test_sphere_direction),
 	PG_TEST(test_sphere_project),
+	PG_TEST(test_lwgeom_area_sphere),
 	PG_TEST(test_signum),
 	PG_TEST(test_gbox_from_spherical_coordinates),
 	PG_TEST(test_gserialized_get_gbox_geocentric),
